# blade

./: # --- Horodatage console (ARESBlade.txt  .editorconfig  .gitattributes  .gitignore  .ruff.toml  README.md  audit_installed.csv  audit_sources.csv  pyproject.toml  requirements.txt  ruff.toml  setup_ares.ps1
.githooks/: pre-commit  pre-commit.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/scripts/: blender_enable_ares.py  tee_ci.ps1  tee_ci.sh
.github/workflows/: ares_ci.yml  ares_ci.yml.disabled  build_zip.yml  ci.yml  ci_pro_clean.yml  publish_release.yml  release-drafter.yml  tt-smoke.yml
ares/: __init__.py
config/: fixbook_rules.yaml  render_eevee_defaults.yaml  render_output_defaults.yaml  render_output_overrides.yaml  turntable_presets.yaml
docs/: ARES_Habits_Master.md  IMPORT_CHECKLIST_v13.md  IMPORT_PLAN_v13.md  QUICKSTART.md  README_v13.md
docs_core/: README.md
summary/: manifest.txt
tests/: __init__.py  run_dog_turntable.py  run_render_bg_demo.py  smoke_blender.py  smoke_helpers.py  smoke_render_bg.py  test_gen_primitives.py  test_import.py  test_public_api.py  test_turntable_smoke.py
tools/: Dev.ps1  Make.ps1  Package.ps1  RenderBg.ps1  ShellInfo.ps1  Sync-XT.ps1  Turntable.ps1  _pytest_in_blender.py  blender_sanity.py  fixpush.ps1  make_zip.ps1  package_ares.ps1  release.ps1  run_blender_sanity.ps1  run_dev.ps1  run_headless_smoke.ps1  run_render.ps1  run_render_bg_demo.ps1  sync_and_scan.ps1  sync_and_scan_xt.ps1  test_blender.ps1  test_render_oneframe.py  test_smoke.py  update_file.py
(+44 files in other folders)
